outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-7754948065129312510_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance and exponentially increase centrality and penalty weights as progress advances, incorporating lookahead up to 5 steps to estimate future connectivity while scaling penalties with node density and progress.}
                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance and exponentially increase centrality and penalty weights as progress advances, incorporating lookahead up to 5 steps to estimate future connectivity while scaling penalties with node density and progress.}
                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'
